--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ android {
     lintOptions {
         disable 'MissingTranslation'
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 play {
